test/errors/template.007.tmpl
<TMPL_VAR [% $valid eq 'text' %]>
<TMPL_VAR [% invalid_identifier eq 'text' %]>
